@@ -144,12 +144,13 @@ static void zend_ssa_remove_nops(zend_op_array *op_array, zend_ssa *ssa)
 			while (i < end) {
 				shiftlist[i] = i - target;
 				if (EXPECTED(op_array->opcodes[i].opcode != ZEND_NOP) ||
-				   /*keep NOP to support ZEND_VM_SMART_BRANCH */
-				   (i > 0 &&
+				   /* Keep NOP to support ZEND_VM_SMART_BRANCH. Using "target-1" instead of
+				    * "i-1" here to check the last non-NOP instruction. */
+				   (target > 0 &&
 				    i + 1 < op_array->last &&
 				    (op_array->opcodes[i+1].opcode == ZEND_JMPZ ||
 				     op_array->opcodes[i+1].opcode == ZEND_JMPNZ) &&
-				    zend_is_smart_branch(op_array->opcodes + i - 1))) {
+				    zend_is_smart_branch(op_array->opcodes + target - 1))) {
 					if (i != target) {
 						op_array->opcodes[target] = op_array->opcodes[i];
 						ssa->ops[target] = ssa->ops[i];
